[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/texture/Mainboss.png" type="Texture" id=1]
[ext_resource path="res://sprites/Mainboss.gd" type="Script" id=2]
[ext_resource path="res://Sounds/Hit.wav" type="AudioStream" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Walking"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=4]
resource_name = "dead"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 118.572, 11.4286 )

[node name="Mainboss" type="KinematicBody2D" groups=["Enemy"]]
scale = Vector2( 0.7, 0.7 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 23
__meta__ = {
"_edit_group_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 1 )
anims/Walking = SubResource( 2 )
anims/dead = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2.85714 )
scale = Vector2( 0.999999, 0.999999 )
shape = SubResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="RayCast2D" type="RayCast2D" parent="."]
visible = false
position = Vector2( 7.14286, 0 )
enabled = true
cast_to = Vector2( 0, 13 )
__meta__ = {
"_edit_group_": true
}

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="PlayerDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2( 14.2857, 4.28572 )
scale = Vector2( 0.999999, 0.999999 )
shape = SubResource( 5 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 15.7143, 7.14286 )
scale = Vector2( 0.3, 0.3 )

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.4

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -15.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_PlayerDetector_body_exited"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
